--- a/nvme_ol_91.adoc
+++ b/nvme_ol_91.adoc
@@ -5,7 +5,7 @@ keywords:
 summary: 
 ---
 
-= NVMe/FC Host Configuration for Oracle Linux 9.1 with ONTAP
+= NVMe-oF Host Configuration for Oracle Linux 9.1 with ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -355,12 +355,16 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:su
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
+[role="tabbed-block"]
+====
+.Column
+--
 ----
 # nvme netapp ontapdevices -o column
 ----
-+
+
 *Example output:*
-+
+
 ----
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
@@ -375,9 +379,14 @@ NSID       UUID                                   Size
 2          04bf9f6e-9031-40ea-99c7-a1a61b2d7d08   85.90GB
 3          264823b1-8e03-4155-80dd-e904237014a4   85.90GB
 ----
-+
+--
+.JSON
+--
 ----
 # nvme netapp ontapdevices -o json
+----
+*Example output*
+----
 {
 "ONTAPdevices" : [
     {
@@ -413,6 +422,7 @@ NSID       UUID                                   Size
   ]
 }
 ----
+--
 
 == Known issues
 
