--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -1,6 +1,6 @@
-=== All SAN Array Configuration
+=== All SAN Array configuration
 
-In All SAN Array (ASA) configurations, all paths to a given Logical Unit (LUN) are active and optimized.  This means I/O can be served through all paths at the same time, thereby enabling better performance.
+In ASA configurations, all paths to a given LUN are active and optimized.  This means I/O can be served through all paths at the same time to improve performance.
 
 .Example
 The following example displays the correct output for an ONTAP LUN:
