--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -1,14 +1,14 @@
 The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] in a 64-bit .rpm file.
 
-Installing the Linux Unified Host Utilities is strongly recommended, but not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
+NetApp strongly recommends installing the Linux Unified Host Utilities is strongly recommended, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
 .What you'll need
 
-If you have a version of Linux Unified Host Utilities currently installed you should upgrade it or, you should remove it and use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed you should upgrade or remove it and use the following steps to install the latest version.
 
 .Steps
 
 .	Download the 64-bit Linux Unified Host Utilities software package from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site^] to your host.
-.	Use the following command to install the software package:
+.	Install the software package:
 +
 `rpm -ivh netapp_linux_unified_host_utilities-7-1.x86_64`
