--- a/_include/hu/reuse_hu_kvm_configuration.adoc
+++ b/_include/hu/reuse_hu_kvm_configuration.adoc
@@ -1,3 +1,3 @@
-=== KVM Settings
+=== KVM settings
 
 You can use the recommended settings to configure Kernel-based Virtual Machine (KVM) as well. There are no changes required to configure KVM as the LUN is mapped to the hypervisor. 
