--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -20,7 +20,7 @@ include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
 == SAN toolkit
 
-The toolkit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+The toolkit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
 In the following example, the `sanlun lun show` command returns LUN information.
 ----
@@ -52,7 +52,7 @@ For Oracle Linux (OL) 8.7 the `/etc/multipath.conf` file must exist, but you do 
 
 include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
 
-The following sections provide sample multipath output for a LUN mapped to ASA and non-ASA personas.
+The following sections provide sample multipath output for a LUN mapped to All SAN Array (ASA) and non-ASA configurations.
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
@@ -67,7 +67,7 @@ size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
   |- 12:0:1:6   sdgp 132:80  active ready running
 ----
 
-NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
+NOTE: Do not use an excessive number of paths to a single LUN. You should require no more than 4 paths. More than 8 paths might cause path issues during storage failures.
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
@@ -146,7 +146,7 @@ You can also use the recommended settings to configure Kernel-based Virtual Mach
 
 There are no known issues for Oracle Linux 8.7.
 
-== Release Notes
+== Release notes
 
 === ASM Mirroring
 
