--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -1,4 +1,4 @@
-=== All SAN Array configuration
+=== All SAN Array configurations
 
 In ASA configurations, all paths to a given LUN are active and optimized.  This means I/O can be served through all paths at the same time to improve performance.
 
