--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -1,5 +1,5 @@
-* The multipath.conf file must exist for the multipath daemon to start, but you can create an empty, zero-byte file using the command:
-`touch /etc/multipath.conf`
+* The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file using the command:
+`touch /etc/multipath.conf`.
 
 * The first time you create this file, you might need to enable and start the multipath services.
 ----
@@ -7,9 +7,9 @@
 # /etc/init.d/multipathd start
 ----
 
-* There is no requirement to add anything directly to multipath.conf, unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
+* There is no requirement to add anything directly to the `multipath.conf` file unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
 
-* You can add the following syntax to the multipath.conf file to exclude the unwanted devices.
+* You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
 
 * Replace the <DevId> with the WWID string of the device you want to exclude. Use the following command to determine the WWID:
 
@@ -23,15 +23,17 @@ blacklist {
 ....
 
 .Example
-In this example, sda is the local SCSI disk that we need to add to the blacklist.
 
-.	Run the following command to determine the WWID:
+In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
+
+. Run the following command to determine the WWID:
 +
-....
+----
 # /lib/udev/scsi_id -gud /dev/sda
 360030057024d0730239134810c0cb833
-....
-.	Add this WWID to the "blacklist" stanza in the /etc/multipath.conf:
+----
+
+. Add this WWID to the "blacklist" stanza in the /etc/multipath.conf:
 +
 ....
 blacklist {
@@ -43,4 +45,5 @@ blacklist {
 ....
 
 You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that may be overriding default settings.
-The table below shows the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in `multipath.conf` that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs may not work as expected. These defaults should only be overridden in consultation with NetApp and/or OS vendor and only when the impact is fully understood.
+
+The following table shows the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in `multipath.conf` that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs may not work as expected. These defaults should only be overridden in consultation with NetApp and/or OS vendor and only when the impact is fully understood.
