--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -4,7 +4,7 @@ NetApp strongly recommends installing the Linux Unified Host Utilities, but it i
 
 .What you'll need
 
-If you have a version of Linux Unified Host Utilities currently installed you should upgrade or remove it and use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed, you should upgrade or remove it, and then use the following steps to install the latest version.
 
 .Steps
 
