--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -1,4 +1,4 @@
-* The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file using the command:
+* The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file by using the following command:
 `touch /etc/multipath.conf`.
 
 * The first time you create this file, you might need to enable and start the multipath services.
@@ -7,7 +7,7 @@
 # /etc/init.d/multipathd start
 ----
 
-* There is no requirement to add anything directly to the `multipath.conf` file unless you have devices that you do not want to be managed by multipath or you have existing settings that override defaults.
+* There is no requirement to add anything directly to the `multipath.conf` file unless you have devices that you do not want multipath to manage or you have existing settings that override defaults.
 
 * You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
 
@@ -44,6 +44,6 @@ blacklist {
 }
 ....
 
-You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that may be overriding default settings.
+You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that might be overriding default settings.
 
-The following table shows the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in `multipath.conf` that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs may not work as expected. These defaults should only be overridden in consultation with NetApp and/or OS vendor and only when the impact is fully understood.
+The following table shows the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they must be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp and/or the OS vendor and only when the impact is fully understood.
