--- a/_include/hu/reuse_hu_san_booting_steps.adoc
+++ b/_include/hu/reuse_hu_san_booting_steps.adoc
@@ -1,9 +1,10 @@
 .Steps
 
 . Map the SAN boot LUN to the host.
-. Verify multiple paths are available.
+. Verify that multiple paths are available.
 +
-[NOTE] Multiple paths become available after the host OS is up and running on the paths.
++
+NOTE: Multiple paths become available after the host OS is up and running on the paths.
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
