--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -48,7 +48,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For Oracle Linux (OL) 8.7 the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. OL 8.7 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For Oracle Linux (OL) 8.7, the `/etc/multipath.conf` file must exist. You do not need to make specific changes to the file because OL 8.7 is compiled with all the settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
 
@@ -67,7 +67,7 @@ size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
   |- 12:0:1:6   sdgp 132:80  active ready running
 ----
 
-NOTE: Do not use an excessive number of paths to a single LUN. You should require no more than 4 paths. More than 8 paths might cause path issues during storage failures.
+NOTE: Do not use an excessive number of paths to a single LUN. You should require no more than four paths. More than eight paths might cause path issues during storage failures.
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
@@ -88,7 +88,7 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 == Recommended settings
 
-The Oracle Linux 8.7 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
+The Oracle Linux 8.7 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configurations.
 
 include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
@@ -140,7 +140,7 @@ NOTE: To configure Oracle Linux 8.7 RedHat Enterprise Kernel (RHCK), use the lin
 
 == KVM settings
 
-You can also use the recommended settings to configure Kernel-based Virtual Machine (KVM). There are no changes required to configure KVM as the LUN is mapped to the hypervisor.
+You can also use the recommended settings to configure the Kernel-based Virtual Machine (KVM). There are no changes required to configure the KVM as the LUN is mapped to the hypervisor.
 
 == Known issues
 
@@ -150,5 +150,5 @@ There are no known issues for Oracle Linux 8.7.
 
 === ASM Mirroring
 
-ASM mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternative failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM does not mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See Oracle Databases on ONTAP for further information.
+Automatic Storage Management (ASM) mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternative failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM does not mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See Oracle Databases on ONTAP for further information.
 
