--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -445,7 +445,7 @@ NSID       UUID                                   Size
 
 == Known issues
 
-NVMe-OF host configuration for Oracle Linux 8.7 with ONTAP release has the following known issues:
+The NVMe-OF host configuration for OL 8.7 with ONTAP release has the following known issues:
 
 [options="header", cols="20, 20, 50, 20]
 |===
