--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -190,7 +190,7 @@ FCP CMPL: xb 00000a89 Err 0000e2f3
 --
 .Steps
 
-. The native inbox qla2xxx driver included in the OL 8.7 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions. :
+. The native inbox qla2xxx driver included in the OL 8.7 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
