--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -17,7 +17,7 @@ summary:
 [.lead]
 NVMe over Fabrics (NVMe-oF), including NVMe/FC and other transports, is supported with Oracle Linux (OL) 8.7 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FC environments and is implemented with in-kernel NVMe multipath. 
 
-The following support is available for NVMe/FC host configuration for OL 8.7 with ONTAP: 
+The following support is available for the NVMe/FC host configuration for OL 8.7 with ONTAP: 
 
 * Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces. 
 
