--- a/hu_rhel_92.adoc
+++ b/hu_rhel_92.adoc
@@ -18,12 +18,11 @@ summary: Describes how to use Red Hat Enterprise Linux 9.2 with ONTAP
 
 The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/downloads[NetApp Support Site^] in a 64-bit .rpm file. 
 
-Installing the Linux Unified Host Utilities is strongly recommended by NetApp, but not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
-
+NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
 .What you'll need
 
-If you have a version of Linux Unified Host Utilities currently installed, you should upgrade or remove it and use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed, you should upgrade or remove it, and then use the following steps to install the latest version.
 
 .Steps
 
