OL 8.7 doc updates

--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -136,7 +136,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.7 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
+[NOTE] To configure Oracle Linux 8.7 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
 
 == KVM settings
 
