--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -154,10 +154,15 @@ For the most current list of supported adapter driver and firmware versions, see
 # cat /sys/class/fc_host/host*/port_name
 0x100000109b3c081f
 0x100000109b3c0820
-
+----
++
+----
 # cat /sys/class/fc_host/host*/port_state
 Online
 Online
+----
++
+----
 # cat /sys/class/scsi_host/host*/nvme_info
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
@@ -194,12 +199,16 @@ FCP CMPL: xb 00000a89 Err 0000e2f3
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
+----
++
+*Example output*
++
+----
 QLE2742 FW:v9.10.11 DVR:v10.02.06.200-k
 QLE2742 FW:v9.10.11 DVR:v10.02.06.200-k
-
 ----
 
-. Verify that `ql2xnvmeenable` is set:
+. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
 ----
 # cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
@@ -306,26 +315,31 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 ----
 
 
-
-
 == Validate NVMe-oF
 
 You can use the following procedure to validate NVMe-oF.
 
 .Steps
 
-. Verify the following NVMe/FC settings on the OL 8.7 host:
+. Verify that in-kernel NVMe multipath is enabled by checking:
 +
 ----
 # cat /sys/module/nvme_core/parameters/multipath
 Y
+----
+
+. Verify that the appropriate NVMe-oF settings (such as `model` set to `NetApp ONTAP Controller` and load balancing `iopolicy` set to `round-robin`) for the respective ONTAP namespaces correctly reflect on the host:
++
+----
 # cat /sys/class/nvme-subsystem/nvme-subsys*/model
 NetApp ONTAP Controller
 NetApp ONTAP Controller
+----
++
+----
 # cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy
 round-robin
 round-robin
-
 ----
 
 . Verify that the namespaces are created and correctly discovered on the host:
@@ -353,12 +367,16 @@ Namespace Usage    Format             FW             Rev
 
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
+[role="tabbed-block"]
+====
+.NVMe/FC
+--
 ----
 # nvme list-subsys /dev/nvme0n1
 ----
-+
+
 *Example output:*
-+
+
 [subs=+quotes]
 ----
 nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:subsystem.nvme_ss_ol_1
@@ -369,6 +387,27 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:su
 +- nvme3 fc traddr=nn-0x203700a098dfdd91:pn-0x203d00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 *live optimized*
 
 ----
+--
+
+.NVMe/TCP
+--
+----
+# nvme list-subsys /dev/nvme1n40
+----
+
+*Example output:*
+
+[subs=+quotes]
+----
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.68c036aaa3cf11edbb95d039ea243511:subsystem.tcp
+\ 
++- nvme2 tcp traddr=192.168.8.49,trsvcid=4420,host_traddr=192.168.8.1 *live non-optimized*
++- nvme3 tcp traddr=192.168.8.48,trsvcid=4420,host_traddr=192.168.8.1 *live non-optimized*
++- nvme6 tcp traddr=192.168.9.49,trsvcid=4420,host_traddr=192.168.9.1 *live optimized* 
++- nvme7 tcp traddr=192.168.9.48,trsvcid=4420,host_traddr=192.168.9.1 *live optimized*
+----
+--
+====
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
@@ -445,7 +484,7 @@ NSID       UUID                                   Size
 
 == Known issues
 
-The NVMe-OF host configuration for OL 8.7 with ONTAP release has the following known issues:
+The NVMe-oF host configuration for OL 8.7 with ONTAP release has the following known issues:
 
 [options="header", cols="20, 20, 50, 20]
 |===
@@ -454,10 +493,9 @@ The NVMe-OF host configuration for OL 8.7 with ONTAP release has the following k
 
 |Oracle Linux 8.7 NVMe-oF Hosts create duplicate Persistent Discovery Controllers
 
-|On OL 8.7 NVMe-oF hosts, Persistent Discovery Controllers (PDCs) are created by passing the "-p" option to the "nvme discover" command. For a given initiator-target combination, only one PDC is expected to be created with each invocation of the "nvme discover" command. However, beginning with ONTAP 9.10.1, OL 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the "nvme discover" command with the -p option. This wastes resources on both the host and the target.
+|On OL 8.7 NVMe-oF hosts, Persistent Discovery Controllers (PDCs) are created by passing the `-p` option to the `nvme discover` command. For a given initiator-target combination, only one PDC is expected to be created with each invocation of the `nvme discover` command. However, beginning with OL 8.x, NVMe-oF hosts end up creating duplicate PDCs with each invocation of the `nvme discover` command with the `-p` option. This wastes resources on both the host and the target.
 |https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
 |===
-
 
 
 == Troubleshooting
