--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -11,7 +11,7 @@
 
 * You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
 
-* Replace the <DevId> with the WWID string of the device you want to exclude. Use the following command to determine the WWID:
+* Replace the <DevId> with the WWID string of the device you want to exclude:
 
 ....
 blacklist {
