--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -26,7 +26,9 @@ In the following example, the `sanlun lun show` command returns LUN information.
 ----
 # sanlun lun show all
 ----
-Example output:
+
+*Example output:*
+
 ----
 controller(7mode/E-Series)/            device     host               lun
 vserver(cDOT/FlashRay)   lun-pathname  filename   adapter  protocol  size    Product
@@ -136,7 +138,8 @@ devices {
 }
 ----
 
-[NOTE] To configure Oracle Linux 8.7 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
+[NOTE] 
+To configure Oracle Linux 8.7 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_87.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
 
 == KVM settings
 
