--- a/nvme_rhel_92.adoc
+++ b/nvme_rhel_92.adoc
@@ -232,7 +232,7 @@ QLE2742 FW:v9.08.02 DVR:v10.02.00.106-k
 --
 ====
 
-.Enable 1MB I/O size
+=== Enable 1MB I/O (Optional)
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
