--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -1,7 +1,9 @@
-* The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file by using the following command:
+The `multipath.conf` file must exist for the multipath daemon to start, but you can create an empty, zero-byte file by using the following command:
+
 `touch /etc/multipath.conf`.
 
-* The first time you create this file, you might need to enable and start the multipath services.
+The first time you create this file, you might need to enable and start the multipath services.
+
 ----
 # chkconfig multipathd on
 # /etc/init.d/multipathd start
@@ -11,20 +13,22 @@
 
 * You can add the following syntax to the `multipath.conf` file to exclude the unwanted devices.
 
-* Replace the <DevId> with the WWID string of the device you want to exclude:
-
-....
+** Replace the <DevId> with the WWID string of the device you want to exclude:
++
+----
 blacklist {
         wwid <DevId>
         devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
         devnode "^hd[a-z]"
         devnode "^cciss.*"
 }
-....
+----
 
 .Example
 
 In this example, `sda` is the local SCSI disk that we need to add to the blacklist.
+
+.Steps
 
 . Run the following command to determine the WWID:
 +
@@ -33,17 +37,17 @@ In this example, `sda` is the local SCSI disk that we need to add to the blackli
 360030057024d0730239134810c0cb833
 ----
 
-. Add this WWID to the "blacklist" stanza in the /etc/multipath.conf:
+. Add this WWID to the "blacklist" stanza in `/etc/multipath.conf`:
 +
-....
+----
 blacklist {
      wwid   360030057024d0730239134810c0cb833
      devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
      devnode "^hd[a-z]"
      devnode "^cciss.*"
 }
-....
+----
 
 You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that might be overriding default settings.
 
-The following table shows the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they must be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp and/or the OS vendor and only when the impact is fully understood.
+The following table demonstrates the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they must be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp and/or the OS vendor and only when the impact is fully understood.
